# esp-matter

./: .gitlab-ci.yml  README.md  RELEASE_NOTES.md
.github/workflows/: docker-image.yml  pre-commit.yml
components/esp_matter/: CMakeLists.txt  esp_matter_ota.cpp
components/esp_matter/data_model/: esp_matter_attribute_helpers.cpp  esp_matter_attribute_helpers.h  esp_matter_data_model.cpp  esp_matter_data_model.h  esp_matter_delegate_callbacks.cpp  esp_matter_delegate_callbacks.h
components/esp_matter_console/: CMakeLists.txt
components/esp_matter_controller/commands/: esp_matter_controller_subscribe_command.cpp  esp_matter_controller_subscribe_command.h
components/esp_matter_controller/core/: esp_matter_controller_client.cpp
components/esp_matter_ota_provider/src/: esp_matter_ota_candidates.cpp
docs/en/: controller.rst  developing.rst  optimizations.rst  security.rst
examples/all_device_types_app/: README.md  partitions.c6.csv  sdkconfig.defaults.esp32c2.v5.5  sdkconfig.defaults.esp32c6
examples/all_device_types_app/main/: CMakeLists.txt  esp_matter_console_helpers.cpp  idf_component.yml
examples/bridge_apps/esp_rainmaker_bridge/main/: CMakeLists.txt  idf_component.yml
examples/controller/main/: CMakeLists.txt  app_main.cpp  idf_component.yml
examples/light/: partitions_wifi_thread.csv  sdkconfig.defaults.c5_wifi_thread  sdkconfig.defaults.c6_wifi_thread
examples/thread_border_router/main/: CMakeLists.txt  app_main.cpp
examples/zap_light/: sdkconfig.defaults.esp32c2.v5.5
tools/data_model_gen/: data_model_gen.py
(+98 files in other folders)
